--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.13.4",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
+    "exceljs": "^4.4.0",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "pdfkit": "^0.17.2",
     "pg": "^8.18.0",
     "recharts": "^3.7.0",
     "xlsx": "^0.18.5"
